--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,9 +6,7 @@
     "importHelpers": true,
     "isolatedModules": true,
     "baseUrl": ".",
-    "lib": [
-      "es2022"
-    ],
+    "lib": ["es2022"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "noEmitOnError": true,
@@ -20,12 +18,8 @@
     "strict": true,
     "target": "es2022",
     "paths": {
-      "@packages/*": [
-        "packages/*"
-      ]
+      "@packages/*": ["packages/*"]
     },
-    "customConditions": [
-      "@eshop/source"
-    ]
+    "customConditions": ["@eshop/source"]
   }
 }
